add crop, rotate and saturate

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,7 @@
 Package: pixelart
 Title: Make Pixel Art Models From Pictures 
-Version: 0.0.0.9000
+Version: 0.0.2
+Date: 2017-11-18
 Authors@R: 
   person("Florian", "Privé", 
          email = "florian.prive.21@gmail.com", 
