add resize shiny app

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(hex2rgb)
 export(kmeans_colors)
 export(pipeline)
 export(plot_color_matrix)
-export(run_app)
+export(run_pixelart)
+export(run_resize)
 import(ggplot2)
 importFrom(magrittr,"%>%")
